# gtc21-cnn-design

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGObject.cmake  FindGStreamer.cmake  FindJsonGlib.cmake  FindTensorRT.cmake  FindUUID.cmake  MacroFindGStreamerLibrary.cmake
config/: init_config.json
includes/core/: face_blur_pipeline.h
includes/inference/: trt_utils.h  yolo.h  yoloPlugins.h
includes/utils/: config_parser.h  pipelineUtils.h
model_configs/: face_detector.cfg  labels.txt  person_detect.cfg
src/: main.cpp
src/core/: face_blur_pipeline.cpp
src/inference/: kernels.cu  nvdsinfer_yolo_engine.cpp  nvdsparsebbox_Yolo.cpp  trt_utils.cpp  yolo.cpp  yoloPlugins.cpp
src/utils/: config_parser.cpp  pipelineUtils.cpp
